<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="facebook_app_id" translatable="false">1702025086719722</string>
    <string name="app_name">Matey</string>
    <string name="app_title">Matey</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_profile">Profile</string>
    <string name="empty_list">No data</string>
    <string name="clipboard_copiedtext_label">Post text</string>
    <string name="toast_textcopied">Text copied to clipboard.</string>
    <string name="error_message">Something went wrong :(</string>
    <string name="error_tittle">Error</string>
    <string name="nogcm_message">Your device without Google Play Services is not supported.</string>
    <string name="success_reg_message">You have successfully registered!</string>
    <string name="registering_dialog_message">Registration in progress..</string>
    <string name="try_connecting_again_btn_tittle">TRY AGAIN</string>
    <string name="no_internet_msg">There is no internet connection, pls try later :)</string>
    <string name="server_not_responding_msg">The server is not responding, please try later :)</string>
    <string name="email_error_msg">Wrong email format.</string>
    <string name="password_error_msg">Password needs to be at least 5 characters long.</string>
    <string name="merge_account_msg">You already have an account with that email, do you want to merge it with facebook account?</string>
    <string name="positive_dialog_answer">Yes</string>
    <string name="negative_dialog_answer">No</string>
    <string name="gettingIn_dialog_message">Getting you in..</string>
    <string name="enter_pass_title">Enter password for email <xliff:g id="first_reply_name">%1$s</xliff:g></string>
    <string name="merge_acc_failed_msg">Account merging has failed</string>
    <string name="content_authority" translatable="false">com.mateyinc.marko.matey</string>
    <string name="account_type" translatable="false">com.matey.user_account</string>
    <string name="friends_section_name">Friends</string>
    <string name="suggested_section_name">Suggested</string>
    <string name="frrequests_section_name">Requests</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_groups">Groups</string>
    <string name="menu_item_interests">Interests</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_copy_text">Copy text</string>
    <string name="groups_joined_section_name">Joined</string>
    <string name="groups_discover_section_name">Discover</string>
    <string name="groups_invites_section_name">Invites</string>
    <string name="action_dropdb">Delete db</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="bulletin_sendtosea_tittle">Send to the sea..</string>
    <string name="bulletin_reply_header"><xliff:g id="first_reply_name">%1$s</xliff:g> and <xliff:g id="reply_count">%2$s</xliff:g> more</string>
    <string name="bulletin_onereply_header"><xliff:g id="first_name">%1$s</xliff:g> <xliff:g id="last_name">%2$s</xliff:g> has replied</string>
    <string name="bulletin_reply_text">... <xliff:g id="replies_count">%1$s</xliff:g> more replies</string>
    <string name="reply_approve">approves</string>
    <string name="continue_reading_message">Continue reading</string>
    <string name="statistics"><xliff:g id="num_of_likes">%1$d</xliff:g> boosts • <xliff:g id="num_of_replies">%2$d</xliff:g> replies</string>
    <string name="bulletin_repliesView_repliesText">Replies:</string>
    <string name="reply_sendReplyText"><i>Quick reply...</i></string>
    <string name="followers_label">followers</string>
    <string name="following_label">following</string>
    <string name="send_letter_label">Send a letter</string>
    <string name="sailing_with_label">Sailing with</string>
    <string name="sail_with_label">Sail with them</string>
    <string name="action_block">Block user</string>
    <string name="search_posts">Posts</string>
    <string name="search_messages">Messages</string>
    <string name="search_friends">Friends</string>
    <string name="post_to_matey">Post to Matey</string>
    <string name="post">Post</string>
    <string name="question">Title</string>
    <string name="description">Decription</string>
    <string name="dev_name">Radovan</string>
    <string name="dev_lname">Ristovic</string>
    <string name="dev_email">radovanr995@gmail.com</string>
    <string name="dev_pic">https://scontent-amt2-1.xx.fbcdn.net/t31.0-8/13418666_1802825583286785_9080680072636685389_o.jpg</string>
    <string name="dev_nopic">https://www.colourbox.com/preview/3851270-no-user-profile-picture.jpg</string>
    <string name="add_all_btn_label">Add all</string>
    <string name="add_btn_label">Add</string>
    <string name="finish_btn_label">finish</string>
    <string name="conToServer_msg">Connecting to the server, please wait..</string>
    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="chose_from_gal_label">Chose from gallery</string>
    <string name="take_a_pic_label">Take a picture</string>
    <string name="choosing_new_pic_title">Choose new picture</string>
    <string name="choosing_new_pic_msg">How would you like to add a picture</string>
    <string name="change_pic_btn">Change picture</string>
    <string name="no_cam_app">No camera app installed</string>
    <string name="no_image_picker">No image picker installed</string>
    <string name="error_capture_image">Can\'t capture new image</string>
    <string name="uploading_pic_title">Uploading picture</string>
    <string name="failed_to_upload_img_msg">Failed to upload new image</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>