<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bulletin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mateyinc.marko.matey.activity.NewPostActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/actionbar_icon_bg"
            android:padding="14dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvNewPostHeading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/post_to_matey"
            android:textSize="@dimen/subHeading" />

        <TextView
            android:id="@+id/tvPost"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/post"
            android:textSize="@dimen/heading" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etNewPostSubject"
        android:layout_width="match_parent"
        android:layout_height="@dimen/newPost_etSubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:background="@color/bg_transparent"
        android:ems="10"
        android:gravity="top|left|start"
        android:hint="@string/question"
        android:inputType="textMultiLine"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:singleLine="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/etNewPostSubject"
        android:layout_marginLeft="@dimen/newPost_divider_margin"
        android:layout_marginRight="@dimen/newPost_divider_margin"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/etNewPostMsg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/etNewPostSubject"
        android:background="@color/bg_transparent"
        android:ems="15"
        android:gravity="top|left|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFileList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/newPost_files_size"
        android:layout_above="@+id/buttons"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="0dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAddPhoto"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:cropToPadding="false"
            android:padding="10dp"
            android:src="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/ivAddFile"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/ivAddPhoto"
            android:layout_toRightOf="@id/ivAddPhoto"
            android:cropToPadding="false"
            android:padding="10dp"
            android:src="@drawable/ic_attachment" />

        <ImageView
            android:id="@+id/ivAddLocation"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/ivAddFile"
            android:layout_toRightOf="@id/ivAddFile"
            android:cropToPadding="false"
            android:padding="10dp"
            android:src="@drawable/ic_location" />

        <ImageView
            android:id="@+id/ivSend"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:cropToPadding="false"
            android:padding="10dp"
            android:src="@drawable/ic_bottle_send" />
    </RelativeLayout>



</RelativeLayout>
